force-app/main/default/objects/LoanAccount__c/LoanAccount__c.object-meta.xml
<CustomObject>
    <label>Loan Account</label>
    <nameField>
        <label>Loan Account</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>