force-app/main/default/objects/LoanAccount__c/fields/bankId__c.field-meta.xml
<CustomField>
    <fullName>bankId__c</fullName>
    <label>Bank</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>Loan Accounts</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>